change to yarn, builder.io integration

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "moderatio-front-end",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "^18.0.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,6 +12,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@builder.io/react": "^3.0.2",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
