--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,7 @@
     "extends": [
         "standard-with-typescript",
         "plugin:react/recommended",
-        "prettier"
+        "eslint-config-prettier"
     ],
     "parserOptions": {
         "ecmaVersion": "latest",
@@ -17,11 +17,11 @@
     },
     "plugins": [
         "react",
-        "prettier"
+        "eslint-plugin-prettier"
     ],
     "rules": {
       "react/react-in-jsx-scope": "off",
-      "prettier/prettier": ["error"],
+      "prettier/prettier": "error",
       "@typescript-eslint/explicit-function-return-type": "off"
     }
 }
