--- a/package.json
+++ b/package.json
@@ -17,12 +17,17 @@
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "dashify": "^2.0.0",
     "eslint": "^8.0.1",
     "eslint-config-next": "13.4.4",
+    "firebase": "^9.22.1",
+    "firebase-admin": "^11.9.0",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.3",
     "tailwindcss": "3.3.2",
     "typescript": "*"
   },
