--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -20,16 +20,17 @@ jobs:
               uses: actions/setup-node@v2
               with:
                   node-version: ${{ matrix.node-version }}
-                  cache: 'npm'
+                  cache: 'yarn'
 
             - name: Run CI command
-              run: npm ci
+              run: yarn install --frozen-lockfile
+
 
             - name: Check linting
-              run: npm run lint
+              run: yarn lint
             
             - name: Run the tests
-              run: npm run test
+              run: yarn test
 
             - name: Build
-              run: npm run build
+              run: yarn build
