--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -29,8 +29,8 @@ jobs:
             - name: Check linting
               run: yarn lint
             
-            - name: Run the tests
-              run: yarn test
+            # - name: Run the tests
+            #   run: yarn test
 
             - name: Build
               run: yarn build
