--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -6,10 +6,14 @@ on:
     pull_request:
         branches: [main]
 
+
+
 jobs:
     build:
         runs-on: ubuntu-latest
-
+        env:
+          BUILDER_PUBLIC_KEY: ${{ secrets.BUILDER_PUBLIC_KEY }}
+          BUILDER_PRIVATE_KEY: ${{ secrets.BUILDER_PRIVATE_KEY }}
         strategy:
             matrix:
                 node-version: [18.15.x]
