--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
     "rules": {
       "react/react-in-jsx-scope": "off",
       "prettier/prettier": "error",
+      "@typescript-eslint/no-floating-promises": "off",
       "@typescript-eslint/explicit-function-return-type": "off"
     }
 }
