--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.3",
+    "react-quill": "^2.0.0",
     "tailwindcss": "3.3.2",
     "typescript": "*"
   },
