--- a/package.json
+++ b/package.json
@@ -12,17 +12,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "0xsequence": "^0.43.30",
+    "@0xsequence/wagmi-connector": "^1.1.5",
     "@builder.io/personalization-utils": "0.0.7",
     "@builder.io/react": "^3.0.2",
     "@builder.io/utils": "^1.0.4",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
+    "add": "^2.0.6",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "dashify": "^2.0.0",
     "eslint": "^8.0.1",
     "eslint-config-next": "13.4.4",
+    "ethers": "^5.6.1",
     "firebase": "^9.22.1",
     "firebase-admin": "^11.9.0",
     "next": "13.4.4",
@@ -33,7 +37,9 @@
     "react-query": "^3.39.3",
     "react-quill": "^2.0.0",
     "tailwindcss": "3.3.2",
-    "typescript": "*"
+    "typescript": "*",
+    "viem": "^1.0.0",
+    "wagmi": "^0.12.13"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.50.0",
