service account firebase env

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,9 @@ NEXT_PUBLIC_FIREBASE_APP_ID=1:319300313029:web:6d8c8acad0644e6dc435ac
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=G-C8MYLLHBYB
 
 
+# this is the service account json. Yes, I put the entire json in a single .env, it is easier to parse
+FIREBASE_SERVICE_ACCOUNT_KEY=
+
 # necessary for the server to store values in firestore.
 # it should match the definition in firestore.
 SERVER_UID=your-server-uid
