--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "18.2.0",
     "react-query": "^3.39.3",
     "react-quill": "^2.0.0",
+    "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.2",
     "typescript": "*",
     "viem": "^1.0.0",
