--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-quill": "^2.0.0",
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.2",
+    "tailwindcss-font-inter": "^3.0.1",
     "typescript": "*",
     "viem": "^1.0.0",
     "wagmi": "^0.12.13"
