--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ethers": "^5.6.1",
     "firebase": "^9.22.1",
     "firebase-admin": "^11.9.0",
+    "gpt-3-encoder": "^1.1.4",
     "next": "13.4.4",
     "next-seo": "^6.0.0",
     "postcss": "8.4.24",
