--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "dashify": "^2.0.0",
+    "date-fns": "^2.30.0",
     "eslint": "^8.0.1",
     "eslint-config-next": "13.4.4",
     "ethers": "^5.6.1",
