--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-modal": "^3.16.1",
     "react-query": "^3.39.3",
     "react-quill": "^2.0.0",
     "react-toastify": "^9.1.3",
@@ -45,6 +46,7 @@
     "wagmi": "^0.12.13"
   },
   "devDependencies": {
+    "@types/react-modal": "^3.16.0",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard-with-typescript": "^35.0.0",
