--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-modal": "^3.16.1",
     "react-query": "^3.39.3",
     "react-quill": "^2.0.0",
+    "react-shimmer": "^3.2.0",
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.2",
     "tailwindcss-font-inter": "^3.0.1",
