--- a/.env.example
+++ b/.env.example
@@ -10,8 +10,10 @@ NEXT_PUBLIC_FIREBASE_APP_ID=1:319300313029:web:6d8c8acad0644e6dc435ac
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=G-C8MYLLHBYB
 
 
-# this is the service account json. Yes, I put the entire json in a single .env, it is easier to parse
-FIREBASE_SERVICE_ACCOUNT_KEY=
+# these is the service account params. Necessary to use firestore
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=
+FIREBASE_CLIENT_EMAIL=
+FIREBASE_PRIVATE_KEY=
 
 # necessary for the server to store values in firestore.
 # it should match the definition in firestore.
