--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "react-modal": "^3.16.1",
     "react-query": "^3.39.3",
     "react-quill": "^2.0.0",
-    "react-shimmer": "^3.2.0",
+    "react-shimmer-effects": "^1.0.2",
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.2",
     "tailwindcss-font-inter": "^3.0.1",
@@ -48,6 +48,7 @@
   },
   "devDependencies": {
     "@types/react-modal": "^3.16.0",
+    "@types/react-router": "^5.1.20",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard-with-typescript": "^35.0.0",
