--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,10 @@ NEXT_PUBLIC_FIREBASE_APP_ID=1:319300313029:web:6d8c8acad0644e6dc435ac
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=G-C8MYLLHBYB
 
 
+# the smart contract address, WITHOUT 0x IN THE BEGINNING THIS IS IMPORTANT
+NEXT_PUBLIC_MODERATIO_ADDRESS=d2ea180ce1a77e9ac5cc9cd25f5a4786ed365932
+
+
 # these is the service account params. Necessary to use firestore
 NEXT_PUBLIC_FIREBASE_PROJECT_ID=
 FIREBASE_CLIENT_EMAIL=
